Update SprayAndWait.java
integer constructor deprecated